# ringtone-forge

./: .gitignore  ANALYSIS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  METHODOLOGY.md  README.md  pyproject.toml  pytest.ini
ringtone_forge/: __init__.py  analyzer.py  classifier.py  cli.py  envelope.py  llm_tuner.py  stems_analyzer.py  verify.py
samples/final/: Brainiac_Maniac_ringtone.m4a  war_drums_ringtone.m4a  借月_ringtone.m4a  离开我的依赖_ringtone.m4a  跳楼机_ringtone.m4a
samples/final-v22/: Brainiac_Maniac_v22.m4a  war_drums_v22.m4a  借月_v22.m4a  离开我的依赖_v22.m4a  跳楼机_v22.m4a
samples/iterations/: 01-trimmed-30s.m4a  02-linear-fadein-5s.m4a  03-three-stage-linear.m4a
samples/source/: war_drums.m4a
scripts/: forge  make-ringtone.sh  run-tests.sh  verify-ringtone.sh
tests/: conftest.py
tests/e2e/: test_full_pipeline.py
tests/integration/: test_cli.py
tests/regression/: test_5_song_picks.py
tests/unit/: test_analyzer.py  test_classifier.py  test_envelope.py  test_envelope_v24.py  test_llm_tuner.py  test_stems_analyzer.py  test_verify.py
