[project]
name = "ringtone-forge"
version = "2.4.0"
description = "Intelligent 30-second ringtone forge with chorus detection and genre-adaptive volume envelopes."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Neo 孫", email = "neosun100@users.noreply.github.com" },
]
keywords = ["ringtone", "audio", "chorus-detection", "ffmpeg", "librosa"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Editors",
]
dependencies = [
    "librosa>=0.10.2",
    "numpy>=1.26",
    "scipy>=1.11",
    "soundfile>=0.12.1",
]

[project.optional-dependencies]
# Deep-learning chorus detection via mir-aidj/all-in-one (WASPAA 2023 SOTA).
# Adds ~1 GB of dependencies. Install with:  uv sync --extra deep
# On Apple Silicon, PyTorch's "cpu" wheel includes the MPS (Metal GPU) backend —
# the wheel name is misleading but it is the right choice for macOS.
deep = [
    "torch>=2.4,<2.5",
    "torchaudio>=2.4,<2.5",
    "demucs>=4.0",
    "madmom @ git+https://github.com/CPJKU/madmom",
]

dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
ringtone-forge = "ringtone_forge.cli:main"

[project.urls]
Homepage = "https://github.com/neosun100/ringtone-forge"
Repository = "https://github.com/neosun100/ringtone-forge"
Issues = "https://github.com/neosun100/ringtone-forge/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ringtone_forge"]

[tool.hatch.metadata]
# Required because the [deep] extra includes a git+https reference (madmom).
allow-direct-references = true

[tool.uv.extra-build-dependencies]
# NATTEN 0.17 builds C++ extensions that need torch at build time.
# uv's default build isolation hides torch — this tells uv to inject it.
